tests/paczka1/small_fuzzy/21797152.err
Error in line 1: S281 S281 56,6
Error in line 9: S1VC S973 4,6
